fix: fix overflow hidden for mobile page

--- a/web/src/assets/css/main.css
+++ b/web/src/assets/css/main.css
@@ -4,7 +4,6 @@ body,
 .wrapper {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 body {
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
