--- a/web/src/assets/css/mobile/chat-list.styl
+++ b/web/src/assets/css/mobile/chat-list.styl
@@ -1,19 +1,21 @@
 .mobile-chat-list {
   .content {
-    .van-cell__value {
-      .chat-list-item {
-        display flex
-        font-size 14px
+    .van-list {
+      .van-cell__value {
+        .chat-list-item {
+          display flex
+          font-size 14px
 
-        .van-image {
-          min-width 32px
-          width 32px
-          height 32px
-        }
+          .van-image {
+            min-width 32px
+            width 32px
+            height 32px
+          }
 
-        .van-ellipsis {
-          margin-top 5px;
-          margin-left 10px;
+          .van-ellipsis {
+            margin-top 5px;
+            margin-left 10px;
+          }
         }
       }
     }
