--- a/web/src/assets/css/mobile/chat-session.css
+++ b/web/src/assets/css/mobile/chat-session.css
@@ -1,5 +1,4 @@
 .mobile-chat .message-list-box {
-  padding-top: 50px;
   padding-bottom: 10px;
   overflow-x: auto;
   background: #f5f5f5;
